Bug 238544 - Kile crashes after creating a new documentclass option in quickstart wizard and deleting it
Summary: Kile crashes after creating a new documentclass option in quickstart wizard a...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.85
Platform: Debian unstable Linux
: NOR crash
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-23 02:19 UTC by Christian Herzberg
Modified: 2010-05-23 12:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Herzberg 2010-05-23 02:19:19 UTC
Application: kile (2.0.85)
KDE Platform Version: 4.4.3 (KDE 4.4.3)
Qt Version: 4.6.2
Operating System: Linux 2.6.34-0.slh.3-sidux-686 i686
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
I can reproduce a crash with the following steps.

Choose "Wizard" -> "Quickstart"
Add a new documentclass option with the "+" Button.
Write "test"
click "OK"
Remove the "test"-option with the "–"-Button
And choose "Continue"

Looking into the documentclass scrolldown menu after add shows two options "test".

Thanks for all efforts

The crash can be reproduced every time.

 -- Backtrace:
Application: Kile (kile), signal: Segmentation fault
[Current thread is 1 (Thread 0xb47ed930 (LWP 19049))]

Thread 2 (Thread 0xb253db70 (LWP 19050)):
#0  0xb77fc424 in __kernel_vsyscall ()
#1  0xb53b9591 in select () from /lib/i686/cmov/libc.so.6
#2  0xb615d72f in QProcessManager::run (this=0xb6298370) at io/qprocess_unix.cpp:245
#3  0xb608093e in QThreadPrivate::start (arg=0xb6298370) at thread/qthread_unix.cpp:248
#4  0xb5098585 in start_thread (arg=0xb253db70) at pthread_create.c:300
#5  0xb53c029e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb47ed930 (LWP 19049)):
[KCrash Handler]
#6  0xb60c770c in QString::length (this=0x907e4d0, ch=..., from=0, cs=Qt::CaseSensitive) at ../../include/QtCore/../../src/corelib/tools/qstring.h:686
#7  QString::indexOf (this=0x907e4d0, ch=..., from=0, cs=Qt::CaseSensitive) at tools/qstring.cpp:2492
#8  0xb60d0c7b in QString::split (this=0x907e4d0, sep=..., behavior=QString::KeepEmptyParts, cs=Qt::CaseSensitive) at tools/qstring.cpp:5909
#9  0x080e34a5 in _start ()

Reported using DrKonqi
Comment 1 Michel Ludwig 2010-05-23 12:40:18 UTC
SVN commit 1129687 by mludwig:

- Ensure that newly added document classes don't show up twice.
- Don't trigger an list out-of-bounds assert when a document class is deleted.

BUG: 238544


 M  +2 -2      quickdocumentdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129687