- Ensure that newly added document classes don't show up twice. - Don't trigger an list out-of-bounds assert when a document class is deleted.

BUG: 238544